--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,6 @@
         @apply font-bold
     }
     .button {
-        @apply text-sm md:text-base bg-gradient-to-b from-yellow-200 to-yellow-500 border border-yellow-300 h-10 rounded-md focus:outline-none focus:border-none focus:ring-1 focus:ring-yellow-500 active:from-yellow-500 active:to-yellow-500
+        @apply text-sm md:text-base bg-gradient-to-b from-yellow-200 to-yellow-500 border border-yellow-300 h-10 rounded-sm focus:outline-none focus:border-none focus:ring-1 focus:ring-yellow-500 active:from-yellow-500 active:to-yellow-500
     }
 }
